# project-template

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
