# View options here: https://python-poetry.org/docs/configuration
[tool.poetry]
description = ""
authors = ["extrange <29305375+extrange@users.noreply.github.com>"]
readme = "README.md"
package-mode = false
packages = [{ include = "my_project", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pyright = "^1.1.375"
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

# View rules here: https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D203", "D211", "D212"]

[tool.ruff.lint.pydocstyle]
# Use PEP257 docstrings
convention = "pep257"
