# View options here: https://python-poetry.org/docs/configuration
[project]
name = "project_template"
version = "0.1"
description = "Python/TS Project Template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic>=2.10.4", "pydantic-settings>=2.7.0"]

[tool.uv]
package = true

[tool.pyright]
# pre-commit: make pyright use the venv
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/explanation/goodpractices.html#which-import-mode
addopts = ["--import-mode=importlib"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "pytest-env>=1.1.5",
    "ruff>=0.8.4",
    "pytest-cov>=6.0.0",
    "coverage>=7.6.10",
]
